2024-01-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.5.2

2024-01-16 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Fixed use of uninitialized local variable 'TempPath'
	  in verbose mode. See https://sourceforge.net/p/dos2unix/bugs/20/
	  Thanks to anonymous.

2023-11-05 Erwin Waterlander <waterlan@xs4all.nl>
	* Updated documentation about ASCII mode conversion.
	  Resolves https://sourceforge.net/p/dos2unix/feature-requests/8/
	  Thanks to Tony Mancill.

2023-10-25 Erwin Waterlander <waterlan@xs4all.nl>
	* New flag 'e' for option -i, --info to print the line break
	  type of the last line.

2023-10-11 Erwin Waterlander <waterlan@xs4all.nl>
	* If option -i is used in combination with -e the line break
	  type of the last line is printed, or "noeol" if there is none.

2023-09-26 Erwin Waterlander <waterlan@xs4all.nl>
	* Changed URLs in manpages from http to https.

2023-08-29 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.5.1

2023-06-01 Erwin Waterlander <waterlan@xs4all.nl>
	* Fixed problem of converting a symbolic link target that
	  is on another file system. Thanks to report of fdamien12.

2023-05-17 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.5.0

2023-04-16 Erwin Waterlander <waterlan@xs4all.nl>
	* New option -O, --to-stdout to write to standard output.
	  Thanks to Victor.

2023-04-06 Erwin Waterlander <waterlan@xs4all.nl>
	* New option -e, --add-eol to add a line break to the last
	  line if there isn't one. Option --no-add-eol disables the
	  feature. Thanks to Anonymous.
	  See https://sourceforge.net/p/dos2unix/feature-requests/6/

2023-02-11 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 7.4.4

2023-01-16 Temuri Doghonadze <temuri.doghonadze@gmail.com>
	* New Georgian translations of UI messages.

2022-12-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Updated manual translations.

2022-12-12 Seong-ho Cho <darkcircle.0426@gmail.com>
	* New Korean translation of the manual.
