@@ -1,0 +1,2 @@
+[po_directory] ../../po-man
+[type: pod] dos2unix.pod $lang:../$lang/man1/dos2unix.pod
