@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 7.5.2
-DOS2UNIX_VERSION_SHORT = 752
-DOS2UNIX_DATE = 2024-01-22
+DOS2UNIX_VERSION = 7.5.3-beta1
+DOS2UNIX_VERSION_SHORT = 753b1
+DOS2UNIX_DATE = 2024-03-26
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
